--- a/src/style.css
+++ b/src/style.css
@@ -4,14 +4,14 @@ body{
     margin: 0px;
     border: none;
     padding: 0px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #frame{
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     border-radius: 30px;
     display: flex;
     justify-content: center;
@@ -22,11 +22,26 @@ body{
     background-color: #2e2e2e;
 }
 
+.arrow{
+    display: flex;
+    border-radius: 1000px;
+    background-color: #2e2e2e;
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+    color: #efefef;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow:hover{
+    background-color: #3d3d3d;
+}
+
 #frame:hover{
     border: 5px dashed;
 }
 
-#filePicker{
-    width: 0px;
-    height: 0px;
+img{
+    height: 100%;
 }
